feat(shared): added updatedAt and createdAt to AvenirsBaseModel
- set createdAt/updatedAt as none nullable column